--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,10 @@ hr{
     margin: 100px auto;
     
 }
+.Mountain{
+    width: 37.375rem;
+    height: 22.313rem;
+}
 .copyright{
     color: #EAF6F6;
     font-size: 0.75rem;
